--- a/main.html
+++ b/main.html
@@ -1,16 +1,111 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
+	<style>
+		.middle {
+			border: 1px solid black;
+			border-spacing: 1px;
+			padding: 1px;
+		}
+		
+		.center {
+			text-align: center;
+		}
+		
+		.right {
+			text-align: right;
+		}
+		
+		.green {
+			background-color: green;
+		}
+		
+		.blue {
+			background-color: blue;
+		}
+	</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<h1 style="text-align: center;">HTML Assignment #3</h1>
+	
+	<table id="table-1" class="middle">
+		<tr>
+			<td id="t11" class="center"colspan="">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td>right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td>right</td>
+		</tr>
+	</table><br>
+	
+	<table id="table-2" class="middle">
+		<tr>
+			<td id="t21" colspan="6">Cell 1</td>
+		</tr>
+		<tr>
+			<td rowspan="4">Cell 2</td>
+			<td>Cell 3</td>
+			<td>Cell 4</td>
+			<td>Cell 5</td>
+			<td>Cell 6</td>
+			<td>Cell 7</td>
+			<td>
+		</tr>
+		<tr>
+			<td>Cell 8</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			
+			<td>Cell 13</td>
+		</tr>
+		<tr>
+			<td>Cell 14</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			
+			<td>Cell 19</td>
+		</tr>
+		<tr>
+			<td>Cell 20</td>
+			<td>Cell 21</td>
+			<td>Cell 22</td>
+			<td>Cell 23</td>
+			<td>Cell 24</td>
+			<td>
+		</tr>
+		<tr>
+			<td colspan="6">Cell 26</td>
+		
+		</tr>
+	</table><br>
+	
+	<table id="table-3" class="middle">
+		<tr class="green">
+			<td>Cell 1</td>
+			<td>Cell 2</td>
+			<td>Cell 3</td>
+		</tr>
+		<tr>
+			<td>Cell 4</td>
+			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image"></td>
+			<td>Cell 6</td>
+		</tr>
+		<tr class="blue">
+			<td>Cell 7</td>
+			<td>Cell 8</td>
+			<td>Cell 9</td>
+		</tr>
+	</table>
 </body>
-
 </html>
